Update several pages and publish/announce Karaf runtime 4.3.6 and 4.2.15 releases

--- a/archives.html
+++ b/archives.html
@@ -31,6 +31,16 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>4.3.6</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351123')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.3.5</td>
                         <td><a href="http://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.sha512">SHA512</a>]<br>
                             <a href="http://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.sha512">SHA512</a>]
@@ -89,6 +99,16 @@ permalink: /archives
                             <a href="http://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.sha512">SHA512</a>]
                         </td>
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343304')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>4.2.15</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351124')">Release Notes</a></td>
                     </tr>
                     <tr>
                         <td>4.2.14</td>
@@ -1001,6 +1021,38 @@ permalink: /archives
                     </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <td>2.8.0</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="http://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.zip">zip</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.zip.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349716')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>2.7.0</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="http://archive.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip">zip</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349505')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>2.6.0</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="http://archive.apache.org/dist/karaf/decanter/2.6.0/apache-karaf-decanter-2.6.0-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.6.0/apache-karaf-decanter-2.6.0-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.6.0/apache-karaf-decanter-2.6.0-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/decanter/2.6.0/apache-karaf-decanter-2.6.0-src.zip">zip</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.6.0/apache-karaf-decanter-2.6.0-src.zip.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.6.0/apache-karaf-decanter-2.6.0-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348394')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>2.5.0</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="http://archive.apache.org/dist/karaf/decanter/2.5.0/apache-karaf-decanter-2.5.0-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.5.0/apache-karaf-decanter-2.5.0-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.5.0/apache-karaf-decanter-2.5.0-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/decanter/2.5.0/apache-karaf-decanter-2.5.0-src.zip">zip</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.5.0/apache-karaf-decanter-2.5.0-src.zip.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.5.0/apache-karaf-decanter-2.5.0-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348163')">Release Notes</a></td>
+                    </tr>
                     <tr>
                         <td>2.4.0</td>
                         <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
