--- a/download.html
+++ b/download.html
@@ -14,32 +14,32 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.3.5</span></h3>
-              <div class="mb-1 text-muted">December 19, 2021</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.3.6</span></h3>
+              <div class="mb-1 text-muted">January 14, 2022</div>
                 <p class="card-text mb-auto">
-                  This release fixes logshell security issue, upgrading to log4j 2.17.0 (fixing CVE-2021-45105 and CVE-2021-44228) and logback 1.2.9 (fixing CVE-2021-42550)
+                  This release fixes security issue, upgrading to log4j 2.17.1, fixing CVE-2021-44832
                 </p>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5-src.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.6/apache-karaf-4.3.6-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.6/apache-karaf-4.3.6-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350856" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351123" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -47,32 +47,32 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.14</span></h3>
-              <div class="mb-1 text-muted">December 24, 2021</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.15</span></h3>
+              <div class="mb-1 text-muted">January 14, 2022</div>
                 <p class="card-text mb-auto">
-                  This release fixes logshell security issue, upgrading to log4j 2.17.0 (fixing CVE-2021-45105 and CVE-2021-44228) and logback 1.2.9 (fixing CVE-2021-42550)
+                  This release fixes security issue, upgrading to log4j 2.17.1 fixing CVE-2021-44832
                 </p>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14-src.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.15/apache-karaf-4.2.15-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.15/apache-karaf-4.2.15-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351061" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351124" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -106,23 +106,23 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Decanter <span class="text-muted">2.7.0</span></h3>
-              <div class="mb-1 text-muted">February 15, 2021</div>
+              <h3 class="mb-0 text-dark">Karaf Decanter <span class="text-muted">2.8.0</span></h3>
+              <div class="mb-1 text-muted">September 16, 2021</div>
               <p class="card-text mb-auto">
                 Installation Instructions:
                   <a href="#decanter-installation">installation</a>
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz">tar.gz</a>
-                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.asc">PGP</a>]
-                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz">tar.gz</a>
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.tar.gz.sha512">SHA512</a>]
                   -
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip">zip</a>
-                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.asc">PGP</a>]
-                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.zip">zip</a>
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.zip.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.8.0/apache-karaf-decanter-2.8.0-src.zip.sha512">SHA512</a>]
               </p>
-              <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349505" role="button" target="_blank">Release note &raquo;</a>
+              <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349716" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -190,8 +190,8 @@ permalink: /download
                       <td>Pax Logging 2.0.12/log4j 2.17.0/logback 1.2.9</td>
                       <td>Pax Web 7.3.23/Jetty 9.4.43.v20210629</td>
                       <td class="text-success">Stable</td>
-                      <td>4.3.5</td>
                       <td>4.3.6</td>
+                      <td>4.3.7</td>
                       <td>Mar 22</td>
                     </tr>
                     <tr>
@@ -202,7 +202,7 @@ permalink: /download
                       <td>Pax Web 7.2.29/Jetty 9.4.43.v20210629</td>
                       <td class="text-success">Stable</td>
                       <td>4.2.14</td>
-                      <td>4.2.15</td>
+                      <td>4.2.16</td>
                       <td>Mar 22</td>
                     </tr>
                     <tr>
@@ -529,9 +529,9 @@ permalink: /download
                         <td>2.0.x</td>
                         <td>4.x</td>
                         <td class="text-success">Stable</td>
-                        <td>2.7.0</td>
                         <td>2.8.0</td>
-                        <td>Jun 21</td>
+                        <td>2.9.0</td>
+                        <td>Feb 22</td>
                     </tr>
                   </tbody>
                 </table>
@@ -559,7 +559,7 @@ permalink: /download
                 </code>
                 <br>
                 <code>
-                    % gpg --verify apache-karaf-4.2.9.tar.gz.asc apache-karaf-4.2.9.tar.gz
+                    % gpg --verify apache-karaf-4.3.6.tar.gz.asc apache-karaf-4.3.6.tar.gz
                 </code>
               </p>
             </div>
