--- a/news.html
+++ b/news.html
@@ -11,13 +11,13 @@ permalink: /news
         <div class="col-md-6">
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
-              <strong class="d-inline-block mb-2 text-primary"><i class="fas fa-globe"></i> World</strong>
+              <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">ApacheCon 2021 @Home</a>
+                <a class="text-dark">Karaf runtime 4.3.6</a>
               </h3>
-              <div class="mb-1 text-muted">September 21, 2020</div>
-              <p class="card-text mb-auto">All sessions are now available on our YouTube channel!</p>
-              <a href="https://www.apachecon.com/acah2021/" target="_blank">Learn more</a>
+              <div class="mb-1 text-muted">January 14, 2022</div>
+              <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series, especially fixing log4j CVE-2021-44228, CVE-2021-45105, CVE-2021-44832 and logback CVE-2021-42550 issues</p>
+              <a href="#">Learn more</a>
             </div>
           </div>
         </div>
@@ -26,10 +26,10 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf runtime 4.3.5</a>
+                <a class="text-dark">Karaf runtime 4.2.15</a>
               </h3>
-              <div class="mb-1 text-muted">December 19, 2021</div>
-              <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series, especially fixing log4j CVE-2021-44228, CVE-2021-45105 and logback CVE-2021-42550 issues</p>
+              <div class="mb-1 text-muted">January 14, 2022</div>
+              <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.2.x series, especially fixing log4j CVE-2021-44228, CVE-2021-45105, CVE-2021-44832 and logback CVE-2021-42550 issues</p>
               <a href="#">Learn more</a>
             </div>
           </div>
@@ -50,8 +50,31 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.3.6 has been released! <span class="text-muted">January 14, 2022</span></h3>
+                <p>Apache Karaf runtime 4.3.6 is a release on the 4.3.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+                  <li>upgrade to Pax Logging 2.0.14, with log4j 2.17.1 fixing CVE-2021-44832</li>
+		  <li>prepare support for JDK 18</li>
+		  <li>fix issue on Apache Felix FileInstall 3.7.4 fixing deployment issue</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351123" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.2.15 has been released! <span class="text-muted">January 14, 2022</span></h3>
+                <p>Apache Karaf runtime 4.2.15 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+			<li>upgrade to Pax Loggin 1.11.13 upgrading to log4j 2.17.1 (fixing CVE-2021-44832)</li>
+			<li>upgrade to Apache Felix FileInstall 3.7.4 fixing deployment issue</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351124" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.3.5 has been released! <span class="text-muted">December 19, 2021</span></h3>
-                <p>Apache Karaf runtime 4.3.5 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
+                <p>Apache Karaf runtime 4.3.5 is a release on the 4.3.x series. It provides updates, fixes, improvements, especially:
                 <ul>
                   <li>upgrade to Pax Logging 2.0.12, with log4j 2.17.0 fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550</li>
                 </ul>
