--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.3.6 has been released! (14/1/22)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes, including log4j 2.17.1 update fixing CVE-2021-44832, Felix FileInstall 3.7.4. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <p><strong>Karaf 4.2.15 has been released! (14/1/22)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes, including log4j 2.17.1 update fixing CVE-2021-44832, Felix FileInstall 3.7.4. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf 4.3.5 has been released! (19/12/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes, including log4j 2.17.0 update fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -75,20 +89,6 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf 4.2.11 has been released! (15/03/21)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Decanter 2.7.0 has been released! (15/02/21)</strong> - This is a new major release for Karaf Decanter 2.x series. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -128,7 +128,7 @@ permalink: /
         <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
         <p class="lead">Karaf is a lightweight, powerful, and enterprise ready modulith runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
         This modulith runtime supports several frameworks and different kind of applications: REST/API, Web, Spring Boot, and much more.</p>
-        <p>Last version <strong>4.3.5</strong> - (19/12/21)</p>
+        <p>Last version <strong>4.3.6</strong> - (14/1/22)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5">
