--- a/news.html
+++ b/news.html
@@ -50,6 +50,18 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.9.0 has been released! <span class="text-muted">February 20, 2022</span></h3>
+                <p>Apache Karaf Decanter 2.9.0 is a major release on the 2.x series. It provides:
+                <ul>
+                  <li>bunch of dependency updates</li>
+                  <li>new property in the log collector to include selected loggers</li>
+                  <li>make the inclusion of Camel history configurable in the Camel collector</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350585" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.3.6 has been released! <span class="text-muted">January 14, 2022</span></h3>
                 <p>Apache Karaf runtime 4.3.6 is a release on the 4.3.x series. It provides updates, fixes, improvements, especially:
                 <ul>
